# microbiome-platform-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: reproducibility_note.md
scripts/: run_01_model_compare_recalibration.py  run_platform_bias_analysis.py  run_v4fl_groupkfold_analysis.py
src/microbiome_platform_bias/: analysis.py  calibration.py  config.py  data_io.py  groupkfold_v4fl.py  model_compare_recalibration.py  modeling.py  plots.py
